--- a/src/Components/Projects Page/ProjectLight.css
+++ b/src/Components/Projects Page/ProjectLight.css
@@ -4,7 +4,9 @@
   padding-left: 11vw;
   padding-top: 10vh;
 }
-
+.prod_Anchor{
+  text-decoration: none;
+}
 .project__main {
   display: flex;
   align-items: center;
