--- a/src/Components/About Me Page/About.css
+++ b/src/Components/About Me Page/About.css
@@ -36,9 +36,10 @@
 
 @media only screen and (max-width: 768px) {
   .about {
-    padding-top: 10vh;
+    padding-top: 33%;
     flex-direction: column;
     align-items: center;
+    height: 95vh;
   }
 
   .about__heading {
