--- a/src/Components/LandingPage/Landing.css
+++ b/src/Components/LandingPage/Landing.css
@@ -8,7 +8,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 5vh;
+
+  padding-top: 6vh;
   background-color: #b8c6db;
   background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
 }
@@ -48,7 +49,9 @@
 @media only screen and (max-width: 768px) {
   .landing {
     padding-top: 0;
+    padding-bottom:5vh;
     height: 95vh;
+
   }
 
   .landing__hr {
