--- a/src/Components/Skills/ProjectLight.css
+++ b/src/Components/Skills/ProjectLight.css
@@ -1,25 +1,28 @@
-.project {
-  height: 85vh;
+.project1 {
+  height: 90vh;
   position: relative;
-  padding-left: 11vw;
-  padding-top: 7vh;
+  /* padding-left: 11vw; */
+  padding-top: 6vh;
+  /* border:1px solid red; */
 
 }
 .prod_Anchor{
   text-decoration: none;
 }
-.project__main {
-  display: flex;
+.project__main1 {
+  /* border:1px solid red; */
+  width:100%;
+  height:100%;
+  margin: auto;
+  
   align-items: center;
-  padding-top: 1vh;
 
 }
 
-.linksDiv{
+/* .linksDiv{
   display:flex;
   gap: 10px;
-}
-
+} */
 
 
 
@@ -91,42 +94,19 @@
   background-image: linear-gradient(315deg, #cbd3e6 0%, #f5f7fa 74%);
 }
 
-/* @media only screen and (max-width: 356px) {
-  .project {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-left: 0;
-    
-    padding-top: 0%;
-   
-    
-  }
-
-
-} */
 @media only screen and (max-width: 768px) {
-  .project__header{
-    font-size: 40px;
-  }
   .light {
     background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
   }
 
-
-
-  .project {
+  .project1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 0;
-    padding-bottom: 33%;
-    /* padding-top: 2%;
-    margin-bottom: -1%; */
-    margin-top:-1%;
-
-
-    
+    height: 100vh;
+    padding:10px;
+    padding-bottom: 100px;
+ 
   }
 
   .project__title {
@@ -168,11 +148,4 @@
   .project__sourceCode:hover {
     transform-origin: left;
   }
-}
-
-.project__titleDark{
-  color:white;
-}
-#title{
-  color:white;
 }
